Add the ProductService to the Client

--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -9,3 +9,4 @@
 @using eTicaretSitesi.Client
 @using eTicaretSitesi.Client.Shared
 @using eTicaretSitesi.Shared
+@using eTicaretSitesi.Client.Services.ProductService
